test/Distributed/distributed_missing_import.code
// RUN: %target-typecheck-verify-language -target %target-language-5.7-abi-triple
// REQUIRES: concurrency
// REQUIRES: distributed

actor SomeActor { }

distributed actor MissingImportDistributedActor_0 { }
// expected-error@-1{{distributed actor 'MissingImportDistributedActor_0' declared without importing module 'Distributed'}}{{5:1-1=import Distributed\n}}

immutable t: DistributedActorSystem // expected-error{{cannot find type 'DistributedActorSystem' in scope}}

